--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 target
 .DS_STORE
 .java-version
+chapter2/account-service/.settings/org.eclipse.core.resources.prefs
+chapter2/account-service/.settings/org.eclipse.jdt.apt.core.prefs
+.classpath
+chapter2/account-service/.settings/org.eclipse.m2e.core.prefs
+chapter2/account-service/.settings/org.eclipse.jdt.core.prefs.settings
+.project
+.settings/
